2005-04-25  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDeveloperExtensions.addin.xml:
	* Commands.cs: Use the new command service. Added hacky support for
	basic svn operations.

2005-04-17  John Luke  <john.luke@gmail.com>

	* Makefile.am: fix distcheck

2005-04-07  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoProject.cs: Look for ChangeLog files in a more rational 
	(and faster) way.

2005-05-07  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoProject.cs: Update the sources file when files are renamed.
	Don't add the ChangeLog file to the project for now, it's too slow
	to look for it.

2005-02-12  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoProject.cs: Don't try to parse errors from the stdout, only
	from stderr.
	* MonoMakefileFormat.cs: In GetValidFormatName, keep the file path.
